# ranksentinel

./: .env.example  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  BOOTSTRAP.md  NEURONS.md  README.md  pyproject.toml  ranksentinel.sqlite3  ranksentinel.sqlite3-shm  ranksentinel.sqlite3-wal  tmp_rovodev_accessibility_summary.md  tmp_rovodev_qa_checklist.md
config/: tool-registry.yaml
cortex/: AGENTS.md  CORTEX_SYSTEM_PROMPT.md  DECISIONS.md  GAP_CAPTURE.md  IMPLEMENTATION_PLAN.md  NEURONS.md  THOUGHTS.md  cleanup_cortex_plan.sh  cortex-ranksentinel.bash  cortex.bash  one-shot.sh  snapshot.sh
docs/: API_CONTRACT.md  COMPETITOR_PRICING_SNAPSHOT.md  MANUAL_VALIDATION_0.10.md  RUNBOOK_VPS.md  SAMPLE_REPORT.md  SKILL_REQUEST_ga4_data_api_reporting.md  SKILL_REQUEST_sqlite_schema_test_alignment.md  WEBSITE_REQUIREMENTS.md  tmp_rovodev_ranksentinel_idea.md
scripts/: run_daily.sh  run_local.sh  run_weekly.sh  test_weekly_report.py  weekly_analytics_digest.py
skills/: conventions.md
tests/: conftest.py  test_404_detection.py  test_artifacts_baseline.py  test_broken_links_integration.py  test_customer_isolation.py  test_customer_status_gating.py  test_daily_critical_email.py  test_db_migrations.py  test_email_canonicalization.py  test_fetch_scheduler.py  test_finding_dedupe.py  test_first_insight_email.py  test_first_insight_endpoint.py  test_first_insight_runner.py  test_fixtures.py  test_http_client.py  test_link_checker.py  test_list_sitemap_urls.py  test_logging.py  test_normalization.py  test_page_fetcher.py  test_paywall_cadence.py  (+18 more)
(+277 files in other folders)
